[project]
name = "flask-url-shortener"
version = "0.1.0"
description = ""
authors = [
    {name = "Benjamin Kozlov Laptop",email = "i@benjamen.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
